# mindent

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md
doc/: mainpage.dox
include/mindent/: display.hpp  parser.hpp  stream_display.hpp  string_display.hpp  syntax_node.hpp  syntax_node_list.hpp  version.hpp
include/mindent/impl/: display.hpp
test/: CMakeLists.txt  indented_tokens.hpp  main.cpp  test_indenter.cpp  test_version.cpp
